--- a/package.json
+++ b/package.json
@@ -41,10 +41,26 @@
     "url": "https://github.com/xan105/node-notification-state-ffi/issues"
   },
   "homepage": "https://github.com/xan105/node-notification-state-ffi#readme",
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/xan105"
+    },
+    {
+      "type": "paypal",
+      "url": "https://www.paypal.me/xan105"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/xan105"
+    }
+  ],
   "dependencies": {
     "@xan105/error": "^1.3.3",
+    "@xan105/ffi": "^0.1.0",
     "@xan105/is": "^2.5.2",
-    "ffi-napi": "^4.0.3"
+    "ffi-napi": "^4.0.3",
+    "koffi": "^2.3.4"
   },
   "devDependencies": {
     "eslint": "^8.20.0"
