--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     ".": {
       "types": "./types/index.d.ts",
       "default": "./lib/index.js"
-    },
-    "./promises": {
-      "types": "./types/promises.d.ts",
-      "default": "./lib/promises.js"
     }
   },
   "types": "./types/index.d.ts",
@@ -21,11 +17,13 @@
     "lint": "npx eslint --ignore-path .gitignore \"./**/*.{js,mjs}\""
   },
   "keywords": [
-    "windows",
     "SHQueryUserNotificationState",
-    "QUERY_USER_NOTIFICATION_STATE",
-    "isFullscreenAppRunning",
-    "ffi"
+    "NtQueryWnfStateData",
+    "WNF",
+    "ntdll",
+    "shell32",
+    "ffi",
+    "windows"
   ],
   "author": {
     "name": "Anthony Beaumont",
@@ -57,7 +55,7 @@
   ],
   "dependencies": {
     "@xan105/error": "^1.3.3",
-    "@xan105/ffi": "^0.1.0",
+    "@xan105/ffi": "^0.2.0",
     "@xan105/is": "^2.5.2",
     "ffi-napi": "^4.0.3",
     "koffi": "^2.3.4"
