--- a/package.json
+++ b/package.json
@@ -7,10 +7,6 @@
     ".": {
       "types": "./types/index.d.ts",
       "default": "./lib/index.js"
-    },
-    "./promises": {
-      "types": "./types/promises.d.ts",
-      "default": "./lib/promises.js"
     }
   },
   "types": "./types/index.d.ts",
@@ -21,11 +17,13 @@
     "lint": "npx eslint --ignore-path .gitignore \"./**/*.{js,mjs}\""
   },
   "keywords": [
-    "windows",
     "SHQueryUserNotificationState",
-    "QUERY_USER_NOTIFICATION_STATE",
-    "isFullscreenAppRunning",
-    "ffi"
+    "NtQueryWnfStateData",
+    "WNF",
+    "ntdll",
+    "shell32",
+    "ffi",
+    "windows"
   ],
   "author": {
     "name": "Anthony Beaumont",
@@ -41,12 +39,27 @@
     "url": "https://github.com/xan105/node-notification-state-ffi/issues"
   },
   "homepage": "https://github.com/xan105/node-notification-state-ffi#readme",
+  "funding": [
+    {
+      "type": "github",
+      "url": "https://github.com/sponsors/xan105"
+    },
+    {
+      "type": "paypal",
+      "url": "https://www.paypal.me/xan105"
+    },
+    {
+      "type": "patreon",
+      "url": "https://www.patreon.com/xan105"
+    }
+  ],
   "dependencies": {
-    "@xan105/error": "^1.3.3",
+    "@xan105/error": "^1.5.0",
+    "@xan105/ffi": "^0.2.0",
     "@xan105/is": "^2.5.2",
-    "ffi-napi": "^4.0.3"
+    "koffi": "^2.3.4"
   },
   "devDependencies": {
-    "eslint": "^8.20.0"
+    "eslint": "^8.34.0"
   }
 }
